# ai-thing

./: .gitignore  Dockerfile  README.md  dto.py  main.py  model.py  pyproject.toml  router.py
.github/workflows/: deploy.yml
