[project]
name = "online-river"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "river (>=0.23.0,<0.24.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "fastapi (>=0.123.10,<0.124.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
    "pyinstaller (>=6.17.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
